# tbg-capture-android

./: README.md  gradle.properties  settings.gradle
app/: build.gradle  conanfile.txt
app/src/androidTest/java/com/tbg/capture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  graph_info.json
app/src/main/cpp/: CMakeLists.txt  android_camera.c  native-lib.cpp
app/src/main/java/com/tbg/capture/: GstAhc.java  MainActivity.java
app/src/main/java/org/freedesktop/gstreamer/: GStreamer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tbg/capture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
gst-android-camera/: .gitignore  AndroidManifest.xml  build.gradle  conanfile.txt
gst-android-camera/jni/: Android.mk
gst-android-camera/src/org/freedesktop/gstreamer/camera/: CameraActivity.java
gstreamer/: .gitignore  AndroidManifest.xml  build.gradle
gstreamer/jni/: Android.mk
gstreamer/src/: .gitignore
